# math-agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  SPECIFICATION.md  USER.md  pyproject.toml  requirements.txt  server.py  start-cloudflare.sh
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  otel-config.yaml  postCreateCommand.sh
.gemini/: settings.json
.github/workflows/: test.yml
data/prompts/: new_prompt.md  step_by_step_tutor.md
exercises/: addition.tex  ana1_preisaufgabe_ex1.tex  ana1_uebung_blatt01_ex2.tex  ana1_uebung_blatt01_ex3.tex  ana1_uebung_blatt01_ex4.tex  ana1_uebung_blatt01_ex5.tex  ana1_uebung_blatt01_ex6.tex  ana1_uebung_blatt01_ex7.tex  ana1_uebung_blatt02_ex10.tex  ana1_uebung_blatt02_ex11.tex  ana1_uebung_blatt02_ex12.tex  ana1_uebung_blatt02_ex13.tex  ana1_uebung_blatt02_ex14.tex  ana1_uebung_blatt02_ex1_ex6_ex10.tex  ana1_uebung_blatt02_ex2.tex  ana1_uebung_blatt02_ex4.tex  ana1_uebung_blatt02_ex5.tex  ana1_uebung_blatt02_ex6.tex  ana1_uebung_blatt02_ex7.tex  ana1_uebung_blatt02_ex8.tex  ana1_uebung_blatt02_ex9.tex  ana1_uebung_blatt04_ex1.tex  ana1_uebung_blatt04_ex2.tex  ana1_uebung_blatt04_ex3.tex  ana1_uebung_blatt04_ex4.tex  ana1_uebung_blatt04_ex5.tex  ana1_uebung_blatt04_ex6.tex  ana1_uebung_blatt04_ex7.tex  ana1_uebung_blatt04_ex8.tex  ana1_uebung_blatt04_ex9.tex  ana1_uebung_blatt05_ex1.tex  ana1_uebung_blatt05_ex2.tex  ana1_uebung_blatt05_ex3.tex  ana1_uebung_blatt05_ex4.tex  ana1_uebung_blatt05_ex5.tex  ana1_uebung_blatt05_ex6.tex  ana1_uebung_blatt05_ex7.tex  ana1_uebung_blatt05_ex8.tex  ana1_uebung_blatt05_ex9.tex  ana1_uebung_blatt06_ex1.tex  (+230 more)
prompts/: v1.md  v5.md
scripts/: claude-dummy  math-agent-simple.sh  math-agent.sh  mock_executor.py  semaphore.sh
src/: models.py  server.py  utils.py
static/: dashboard.html  job.html  styles.css  submit.html
tests/: __init__.py  conftest.py  test_api.py  test_job_executor.py  test_job_flow.py  test_job_manager.py  test_models.py  test_server.py  test_utils.py  utils.py
(+350 files in other folders)
