[project]
name = "math-agent"
version = "0.1.0"
description = "Math Agent Benchmarking System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0", # For testing FastAPI
    "pyright>=1.1.402",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
